<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Coffee ordering</string>
    <string name="name_tv">"Enter your name: "</string>
    <string name="name_et">Name</string>
    <string name="quantity_tv">Quantity</string>
    <string name="toppings_tv">Toppings</string>
    <string name="whipped_cream_cb">Whipped cream</string>
    <string name="chocolate_cb">Chocolate</string>
    <string name="order_btn">Order</string>
    <string name="order_summary">Order summary</string>
    <string name="add_whipped_cream">"Add whipped cream? "</string>
    <string name="add_chocolate">"Add chocolate? "</string>
    <string name="total">"Total: "</string>
    <string name="thank_you">Thank you!</string>
    <string name="coffee_order_for">"coffee order for "</string>
    <string name="quantity">"Quantity: "</string>
    <string name="name_order_summary">"Name: "</string>
    <string name="no_less">"Sorry, you can't order less coffee"</string>
    <string name="no_more">"Sorry, you can't order more coffee"</string>
    <string name="ordering">"Ordering…"</string>
    <string name="pls_enter_name">"Please enter your name first!"</string>
</resources>
