<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        tools:context=".MainActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/name_et" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/headlines"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity_tv"
            android:layout_marginStart="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp">

            <Button
                android:id="@+id/decreaseBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-" />

            <TextView
                android:id="@+id/quantityTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1" />

            <Button
                android:id="@+id/increaseBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+" />

        </LinearLayout>

        <TextView
            style="@style/headlines"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings_tv" />

        <CheckBox
            android:id="@+id/creamCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp"
            android:text="@string/whipped_cream_cb"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chocolateCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp"
            android:text="@string/chocolate_cb"
            android:textSize="20sp" />

        <Button
            android:id="@+id/orderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/order_btn" />

    </LinearLayout>

</ScrollView>
